Changed to use pivot.util.Base64 instead of internal sun.misc.BASE64Decoder
git-svn-id: https://svn.apache.org/repos/asf/incubator/pivot/trunk@753815 13f79535-47bb-0310-9956-ffa450edef68